--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -15,10 +15,12 @@ jobs:
         dotnet-version: 3.0.100
     - name: Build with dotnet
       run: dotnet build --configuration Release
-    - name: Build docker
-      uses: zenato/docker-action@master
+    - name: Publish Docker
+      uses: elgohr/Publish-Docker-Github-Action@2.7
       with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ponomnikita/resource-booking
-          tag: 1.0
+        name: ponomnikita/resource-booking
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: ./src/ResourcesBooking.Host/Dockerfile
+        workdir: ./src/ResourcesBooking.Host
+
