--- a/src/ResourcesBooking.Host/appsettings.json
+++ b/src/ResourcesBooking.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Resources": "Host=localhost;Username=rb;Password=P@ssw0rd;Database=resources2;Pooling=true;"
+    "Resources": "Host=localhost;Username=rb;Password=P@ssw0rd;Database=resources;Pooling=true;"
   },
   "Serilog": {
     "MinimumLevel": {
