--- a/src/ResourcesBooking.Host/appsettings.json
+++ b/src/ResourcesBooking.Host/appsettings.json
@@ -19,4 +19,12 @@
     "tokenEndpoint": "https://gitlab.com/oauth/token",
     "userInfoEndpoint": "https://gitlab.com/api/v4/user"
   }
+
+  // "notifications": {
+  //   "hostname": "https://localhost",
+  //   "mattermost": {
+  //     "hook": "https://mattermost/hooks/j785o5ppj7r1ib5wkf8wns4xaa"
+  //   }
+  }
+
 }
