--- a/src/ResourcesBooking.Host/ResourcesBooking.Host.csproj
+++ b/src/ResourcesBooking.Host/ResourcesBooking.Host.csproj
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Matterhook.NET.MatterhookClient" Version="1.4.1" />
     <PackageReference Include="MediatR" Version="7.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
