--- a/src/ResourcesBooking.Host/appsettings.json
+++ b/src/ResourcesBooking.Host/appsettings.json
@@ -20,11 +20,17 @@
     "userInfoEndpoint": "https://gitlab.com/api/v4/user"
   }
 
+  // "booking": {
+  //   "minBookingPeriodInMinutes": 1,
+  //   "maxBookingPeriodInMinutes": 1440
+  // },
+
   // "notifications": {
   //   "hostname": "https://localhost",
-  //   "mattermost": {
-  //     "hook": "https://mattermost/hooks/j785o5ppj7r1ib5wkf8wns4xaa"
-  //   }
+  //   "notifyBeforeEndingOfReservationInMinutes": 5
+    // "mattermost": {
+    //   "hook": "https://mattermost/hooks/j785o5ppj7r1ib5wkf8wns4xaa"
+    // }
   //}
 
 }
