--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -12,11 +12,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Publish Docker
+    - name: Publish image to Docker Hub
       uses: elgohr/Publish-Docker-Github-Action@2.7
       with:
         name: ponomnikita/resource-booking
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         workdir: src/ResourcesBooking.Host
+    - name: Login to Heroku Container registry
+      env: 
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: heroku container:login 
+    - name: Build and push
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: cd src/ResourcesBooking.Host && heroku container:push -a resources-booking web 
+    - name: Release
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: cd src/ResourcesBooking.Host && heroku container:release -a resources-booking web 
 
