--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -12,13 +12,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Publish image to Docker Hub
-      uses: elgohr/Publish-Docker-Github-Action@2.7
-      with:
-        name: ponomnikita/resource-booking
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        workdir: src/ResourcesBooking.Host
+    
+    - name: Login to Docker Hub
+      run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
+    - name: Build docker image
+      run: cd src/ResourcesBooking.Host && docker build . -t ponomnikita/resource-booking:latest -f Dockerfile.dockerhub      
+    - name: Push docker image
+      run: docker push ponomnikita/resource-booking:latest
+      
     - name: Login to Heroku Container registry
       env: 
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
