--- a/src/ResourcesBooking.Host/Dockerfile.dockerhub
+++ b/src/ResourcesBooking.Host/Dockerfile.dockerhub
@@ -1,5 +1,3 @@
-# Heroku dockerfile
-
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0 AS build-env
 WORKDIR /app
 
@@ -16,4 +14,7 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.0
 WORKDIR /app
 COPY --from=build-env /app/out .
 
-CMD ASPNETCORE_URLS=http://*:$PORT dotnet ResourcesBooking.Host.dll
+EXPOSE 80
+EXPOSE 443
+
+ENTRYPOINT ["dotnet", "ResourcesBooking.Host.dll"]
