--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -2,6 +2,10 @@ name: .NET Core
 
 on:
   workflow_dispatch:
+    inputs:
+      tag:
+        description: 'image tag'
+        required: true
   push:
     branches:
       - master
@@ -16,16 +20,16 @@ jobs:
 
     - name: Build VERSION
       run: echo .${{ github.run_number }} >> src/ResourcesBooking.Host/VERSION
-      
+
     - name: cat VERSION
       run: cat src/ResourcesBooking.Host/VERSION
     
     - name: Login to Docker Hub
       run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
     - name: Build docker image
-      run: cd src/ResourcesBooking.Host && docker build . -t ponomnikita/resource-booking:latest -f Dockerfile.dockerhub      
+      run: cd src/ResourcesBooking.Host && docker build . -t ponomnikita/resource-booking:${{ github.event.inputs.tag:-latest }} -f Dockerfile.dockerhub      
     - name: Push docker image
-      run: docker push ponomnikita/resource-booking:latest
+      run: docker push ponomnikita/resource-booking:${{ github.event.inputs.tag:-latest }}
       
     - name: Login to Heroku Container registry
       env: 
