--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -27,9 +27,9 @@ jobs:
     - name: Login to Docker Hub
       run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
     - name: Build docker image
-      run: cd src/ResourcesBooking.Host && docker build . -t ponomnikita/resource-booking:${github.event.inputs.tag:-latest} -f Dockerfile.dockerhub      
+      run: cd src/ResourcesBooking.Host && docker build . -t ponomnikita/resource-booking:${{github.event.inputs.tag:-latest}} -f Dockerfile.dockerhub      
     - name: Push docker image
-      run: docker push ponomnikita/resource-booking:${github.event.inputs.tag:-latest}
+      run: docker push ponomnikita/resource-booking:${{github.event.inputs.tag:-latest}}
       
     - name: Login to Heroku Container registry
       env: 
