added default value for workflow input

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -6,6 +6,7 @@ on:
       tag:
         description: 'image tag'
         required: true
+        default: latest
   push:
     branches:
       - master
