removed new line in echo command at workflow #3

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Build VERSION
-      run: echo ".${{ github.run_number }}\c" >> src/ResourcesBooking.Host/VERSION
+      run: echo -n .${{ github.run_number }} >> src/ResourcesBooking.Host/VERSION
 
     - name: cat VERSION
       run: cat src/ResourcesBooking.Host/VERSION
