--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -6,13 +6,15 @@ on:
       tag:
         description: 'image tag'
         required: true
-        default: latest
   push:
     branches:
       - master
 
 jobs:
   build:
+    
+    env:
+      TAG: github.event.inputs.tag
 
     runs-on: ubuntu-latest
 
@@ -24,13 +26,17 @@ jobs:
 
     - name: cat VERSION
       run: cat src/ResourcesBooking.Host/VERSION
+      
+    - name: Setting default tag if necessary
+      if: TAG == ''
+      run: $TAG=latest
     
     - name: Login to Docker Hub
       run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
     - name: Build docker image
-      run: cd src/ResourcesBooking.Host && docker build . -t ponomnikita/resource-booking:${{github.event.inputs.tag}} -f Dockerfile.dockerhub      
+      run: cd src/ResourcesBooking.Host && docker build . -t ponomnikita/resource-booking:${{TAG}} -f Dockerfile.dockerhub      
     - name: Push docker image
-      run: docker push ponomnikita/resource-booking:${{github.event.inputs.tag}}
+      run: docker push ponomnikita/resource-booking:${{TAG}}
       
     - name: Login to Heroku Container registry
       env: 
