--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,9 +14,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
-    env:
-      TAG: ''
 
     steps:
     - uses: actions/checkout@v1
@@ -26,14 +23,16 @@ jobs:
 
     - name: cat VERSION
       run: cat src/ResourcesBooking.Host/VERSION
-      
-    - name: Setting default tag if empty
-      if: github.event.inputs.tag == ''
-      run: $TAG=latest
+
+    - name: Setting default tag if necessary
+      uses: allenevans/set-env@v2.0.0
+      with:
+        TAG: 'latest'
 
     - name: Setting tag if input tag not empty
-      if: github.event.inputs.tag != ''
-      run: $TAG=github.event.inputs.tag
+      uses: allenevans/set-env@v2.0.0
+      with:
+        TAG: $github.event.inputs.tag
     
     - name: Login to Docker Hub
       run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
