--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,14 +25,16 @@ jobs:
       run: cat src/ResourcesBooking.Host/VERSION
 
     - name: Setting default tag if necessary
+      if: github.event.inputs.tag == ''
       uses: allenevans/set-env@v2.0.0
       with:
         TAG: 'latest'
 
     - name: Setting tag if input tag not empty
+      if: github.event.inputs.tag != ''
       uses: allenevans/set-env@v2.0.0
       with:
-        TAG: $github.event.inputs.tag
+        TAG: github.event.inputs.tag
     
     - name: Login to Docker Hub
       run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
