--- a/src/ResourcesBooking.Host/ResourcesBooking.Host.csproj
+++ b/src/ResourcesBooking.Host/ResourcesBooking.Host.csproj
@@ -27,4 +27,8 @@
     </Content> 
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PlanningPoker\PlanningPoker.csproj" />
+  </ItemGroup>
+
 </Project>
