Made smth else for poker markup. User.cs was moved to CommonLibs.csproj

--- a/src/PlanningPoker/PlanningPoker.csproj
+++ b/src/PlanningPoker/PlanningPoker.csproj
@@ -22,4 +22,8 @@
     <_ContentIncludedByDefault Remove="wwwroot\exampleJsInterop.js" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonLibs\CommonLibs.csproj" />
+  </ItemGroup>
+
 </Project>
