--- a/src/ResourcesBooking.Host/ResourcesBooking.Host.csproj
+++ b/src/ResourcesBooking.Host/ResourcesBooking.Host.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MediatR" Version="7.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
@@ -28,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommonLibs\CommonLibs.csproj" />
     <ProjectReference Include="..\PlanningPoker\PlanningPoker.csproj" />
   </ItemGroup>
 
